[Slskd] Improve matching queries